2016-09-05  Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix and enhance exceptions dialog

2016-09-01  Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix include subcategories in filtering and remove the button for transfers and when extra properties is disabled (for improved layout)
	* Remove quantity from incomes edit
	* Add tooltip to description and quantity
	* Fix not all transactions being listed in confirm schedule dialog

2016-08-29  Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix charts withput extra properties
	* Fix charts without QtCharts

2016-08-25  Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix value column in multi-account transaction dialog
	* Fix multiple duplicate completion items when removing, than adding transaction with unique description
	* Use extra properties by default

2016-08-24  Hanna Knutsson <hanna_k@fmgirl.com>

	* Place "All" last in export QIF dialog account combo (it is not a appropriate default option)
	* Common payee/payer for multi item transactions

2016-08-21  Hanna Knutsson <hanna_k@fmgirl.com>

	* Import/export sub categories from/to QIF files

2016-08-16  Hanna Knutsson <hanna_k@fmgirl.com>

	* Import sub categories, payees and quantity from CSV files

2016-08-15  Hanna Knutsson <hanna_k@fmgirl.com>

	* Autocomplete transaction also when selecting category or payee

2016-08-14  Hanna Knutsson <hanna_k@fmgirl.com>

	* Loans, multi account transactions, scheduled split transactions, debt payments, etc.
	* Bold summary/parent items with icons in account view

2016-07-08  Hanna Knutsson <hanna_k@fmgirl.com>

	* Export transactions to CSV file with a more compatible number format

2016-07-06  Hanna Knutsson <hanna_k@fmgirl.com>

	* Assets over time chart
	* Show expenses as negative values in stacked bar chart for incomes and expenses

2016-07-05  Hanna Knutsson <hanna_k@fmgirl.com>

	* Completely remove dependency on Qt Xml by using QXmlStreamWriter instead of QDom*
	* Colors for securities

2016-07-04  Hanna Knutsson <hanna_k@fmgirl.com>
