@@ -1,3 +1,7 @@
+2016-09-06  Hanna Knutsson <hanna_k@fmgirl.com>
+
+	* Fix yearly recurrence
+
 2016-09-05  Hanna Knutsson <hanna_k@fmgirl.com>
 
 	* Fix and enhance exceptions dialog
